--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/viniciusls/nodejs-telegram-updownbot/issues"
   },
-  "homepage": "https://github.com/viniciusls/nodejs-telegram-updownbot#readme"
+  "homepage": "https://github.com/viniciusls/nodejs-telegram-updownbot#readme",
+  "dependencies": {
+    "telegraf": "^3.24.1"
+  }
 }
