--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/viniciusls/nodejs-telegram-updownbot#readme",
   "dependencies": {
+    "eslint": "^5.7.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "ini": "^1.3.5",
     "request": "^2.88.0",
     "telegraf": "^3.24.1"
